@@ -1,3 +1,5 @@
+2011-08-30 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* In plugin list view, you can now switch into the list or page module
 2011-08-16 CERDAN Yohann <cerdanyohann@yahoo.fr>
 	* Small bugfix in the ExtDirect reports
 2011-08-15 CERDAN Yohann <cerdanyohann@yahoo.fr>
